Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
None
-
-
41ac479c06c07159ae536c2dde94b805c651bacc (qt/qtmultimedia/dev) 18c6f52b8c9137f8e3279adf3f1d41ac5fad3ff4 (qt/qtmultimedia/6.2)
-
2021wk48POAndroid&Mobile
Description
Currently, it is not possible to know which percentage of buffering is done on a remote video source using QMediaPlayer on Android.
There is a bufferProgressChanged signal but it is only emitted when the media status changes, which means that it is only emitted when the video starts and when it finishes buffering.
Attachments
Issue Links
- resulted from
-
QTBUG-97402 Qt6 Multimedia: Signals not fired on change of Audio Track
-
- Closed
-
- mentioned in
-
Page Loading...